--- a/netflix.css
+++ b/netflix.css
@@ -1,23 +1,313 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
-img{
-    width: 100%;
-    height: 90vh;
-    object-fit: cover;
-    display: block;
+*{
+    margin: 0;
+    padding: 0;
 }
 body{
     background-color: black;
+    overflow-x: hidden;
+}
+.heading{
+    display: flex;
+}
+.drop{
+    height: 25%;
+    text-decoration: solid;
+    font-size: 100%;
+    background-color:transparent;
+    position: relative;
+    left: 39%;
+    margin-top:1.5% ;
+}
+select{
+    border: none;
+    background: transparent;
+    box-sizing: border-box;
+    color: white;
+    margin: auto;
+    opacity: 0.8;
+}
+.lan-button{
+    background: transparent;
+    border: 1px solid white;
+    padding: 0.3px;
+    border-radius: 6px;
+    box-sizing: border-box;
+}
+.logo-netflix{
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-image: url('images/netflix\ logo.png');
+    width: 22%;
+    height: 105px;
+    margin-left: 11%;
+    margin-top: -0.5%;
+    opacity: 100%;
+}
+.sign-in{
+    background-color: rgb(255, 0, 0);
+    padding: 5px;
+    cursor: pointer;
+    border-radius: 5px;
+    width: 5.4%;
+    color: white;
+    font-size: 16px;
+    font-weight: 600;
+    font-style: bold;
+    height: 40%;
+    border: none;
+    position: relative;
+    left: 41%;
+    margin-top: 1.5%;
+}
+.netflix-image{
+    background-image: url('/images/netflix\ updated.jpg');
+    position: relative;
+    width: 99vw;
+    height: 96vh;
+    background-repeat: no-repeat;
 }
 .center-text{
+    font-size: 50px;
     color: white;
-    font-family:'poppins',sans-serif;
-    font-size: 2rem;
-    /* left: 50%;
-    top: 50%; */
-    object-fit: initial;
+    font-weight: 1000;
+    margin: auto;
+    text-align: center;
+    position: relative;
+    top: 25%;
+}
+.second-text{
+    color: white;
+    margin: auto;
+    text-align: center;
+    position: relative;
+    font-size: 25px;
+    font-weight: 500;
+    top: 26%;
+}
+.third-text{
+    position: relative;
+    color: white;
+    margin: auto;
+    text-align: center;
+    font-size:22px;
+    font-weight: 500;
+    top: 29%;
+}
+.input-email{
+    align-items: center;
+    display: inline;
+    position: relative;
+    margin: auto;
+    height: 50px;
+    top: 31%;
+    left: 30%;
+    color: white;
+}
+.mail{
+    height: 60px;
+    padding-left: 13px;
+    opacity: 0.5;
+    width: 27%;
+    border-radius: 5px;
+}
+.getstarted{
+    width: 14%;
+    height: 60px;
+    background-color: red;
+    color: white;
+    font-size: bold;
+    font-size: 25px ;
+    border-radius: 5px ;
+    border: none;
+    margin-left: 2px;
+    margin-top:3px ;
+    cursor: pointer;
+}
+.lining{
+    top: 96vh;
+    height: 10px;
+    background-color: rgba(36, 32, 32, 0.835);
+    width: 99vw;
+}
+.second-half{
+    position: relative;
+    height: 600px;
+}
+.video-text{
+    width: 1200px;
+    height: 400px;
+    display: flex;
+    top: 23%;
+    margin-top: 10px;
+    margin-left: 15%;
+    position: relative;
+}
+.mp4-video-1{
     position: absolute;
-    font-style: unset;
-    margin: -26% 18%;
-    /* background-color: red; */
-    /* padding: -50px; */
+    left: 57.5%;
+    z-index: 1;
+}
+.Third-half{
+    height: 600px;
+}
+.mobile-text{
+    left: 8%;
+    top: 13%;
+    width: 1200px;
+    display: flex;
+    position: relative;
+}
+.third-half-text{
+    position: relative;
+    top: 100px;
+}
+.third-half-download{
+    width: 300px;
+    height: 100px;
+    top: 270px;
+    left: 108px;
+    position: absolute;
+    background-color: black;
+    display: flex;
+    border: 2px solid rgb(134, 132, 132);
+    border-radius: 10px;
+}
+.fourth-half{
+    height: 600px;
+}
+.fourth-images-text{
+    display: flex;
+    width: 1200px;
+    position: relative;
+    top: 8%;
+    left: 12%;
+}
+.fifth-half{
+    height: 600px;
+}
+.fifth-images-text{
+    display: flex;
+    width: 1200px;
+    position: relative;
+    top: 13%;
+    left: 10%;
+}
+.sixth-half{
+    height: 110%;
+}
+.sixth-heading{
+    font-size: 50px;
+    font-weight: bolder;
+    font-family: 'Times New Roman', Times, serif;
+    position: relative;
+    left: 30%;
+    top: 7%;
+    color: white;
+    align-items: center;
+    width: 700px;
+    margin-top: 30px;
+}
+.sixth-questions{
+    display: block;
+    position: relative;
+    top: 10%;
+    left: 170px;
+    margin-right: 0px;
+    width: 80%;
+    height: 90%;
+    padding: 0;
+    box-sizing: border-box;
+}
+.sixth-que-1{
+    display: flex;
+    position: relative;
+    cursor: pointer;
+    width: 100%;
+    height: 78px;
+    color: white;
+    font-size: 25px;
+    background-color: rgb(45,45,45);
+    margin-top:10px ;
+}
+.sixth-que-1:hover{
+    background-color: rgb(62, 62, 62);
+}
+.sixth-half-email{
+    display: flex;
+}
+#sixth-description-que{
+    display: none;
+    background-color: rgb(45, 45, 45);
+    color:white;
+    width: 100%;
+    padding: 20px;
+    font-size: 25px;
+    box-sizing: border-box;
+}
+#sixth-description-que2{
+    display: none;
+    background-color: rgb(45, 45, 45);
+    color:white;
+    width: 100%;
+    padding: 20px;
+    font-size: 25px;
+    box-sizing: border-box;
+}
+#sixth-description-que3{
+    display: none;
+    background-color: rgb(45, 45, 45);
+    color:white;
+    width: 100%;
+    padding: 20px;
+    font-size: 25px;
+    box-sizing: border-box;
+}
+#sixth-description-que4{
+    display: none;
+    background-color: rgb(45, 45, 45);
+    color:white;
+    width: 100%;
+    padding: 20px;
+    font-size: 25px;
+    box-sizing: border-box;
+}
+#sixth-description-que5{
+    display: none;
+    background-color: rgb(45, 45, 45);
+    color:white;
+    width: 100%;
+    padding: 20px;
+    font-size: 25px;
+    box-sizing: border-box;
+}
+#sixth-description-que6{
+    display: none;
+    background-color: rgb(45, 45, 45);
+    color:white;
+    width: 100%;
+    padding: 20px;
+    font-size: 25px;
+    box-sizing: border-box;
+}
+.ending-seventh{
+    height: 500px;
+    color: white;
+}
+.seventh-flex{
+    display: grid;
+    gap: 0;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin-top: 40px;
+}
+.seventh-call{
+    position: relative;
+    top: 80px;
+    left: 14%;
+    width: 1000px;
+    height: 300px;
+}
+.last-section{
+   cursor: pointer; 
+   margin-bottom: 10px;
 }
